# Credit-Risk-Default-Prediction-System

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
credit_risk/: dataset.py  evaluation.py  features.py  utils.py
credit_risk/api/: main.py  schemas.py
credit_risk/modeling/: mlp.py  predict.py  train.py
notebooks/: 01_eda_initial_exploration.ipynb  02_feature_engineering_v1.ipynb  03_baseline_logistic_regression.ipynb  04_baseline_tree_models.ipynb  05_feature_engineering_v2.ipynb  06_feature_engineering_Regime_b.ipynb  07_FE_zip_code_ex_2.ipynb  08_FE_creating_ratios_ex_3.ipynb  09_FE_info_missing_cols_ex_4.ipynb  10_FE_all_experiments_at_once.ipynb  11_XGboost_tuning.ipynb  12_calibration_analysis_of_tuned_xgb_model.ipynb  13_cost_sentivity_analysis.ipynb  14_segmented_error_analysis.ipynb  15_fairness_audit.ipynb  16_Tring_Neural_Nets.ipynb  17_model_selection.ipynb  17_model_selection_except_nn.ipynb  18_model_selection_only_nn.ipynb  19_setting_up_mlflow.ipynb  20_trying_shap.ipynb  testing.ipynb
references/: Column Glossary.md  data_card.md  schema_for_mlflow.md
reports/after_FE/: after_fe_lr.json  after_fe_rf.json  after_fe_xgb.json
reports/baseline_metrics/: baseline_lr.json  baseline_rf.json  baseline_xgb.json
tests/: conftest.py  test_api.py  test_dataset_functions.py  test_distributions.py  test_features_functions.py  test_pipeline_invariants.py  test_predict.py  test_schema.py  test_values.py
