[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk"
version = "0.0.1"
description = "Building a complete e2e system for credit risk default prediction system"
authors = [
  { name = "Aditya Kumar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "fastapi>=0.139.0",
    "ipython",
    "ipywidgets>=8.1.8",
    "jupyterlab",
    "kaggle>=2.1.2",
    "loguru",
    "matplotlib",
    "mlflow>=3.14.0",
    "notebook",
    "numpy",
    "optuna>=4.9.0",
    "pandas",
    "pip",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "shap>=0.51.0",
    "torch>=2.12.1",
    "tqdm",
    "typer",
    "uvicorn>=0.50.2",
    "xgboost>=3.2.0",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["credit_risk"]
include = ["pyproject.toml", "credit_risk/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit_risk"]
force-sort-within-sections = true

